# saper-tauri

./: .gitattributes  .gitignore  DEPLOYMENT_README.md  ENVIRONMENT_SETUP.md  Makefile  PODSUMOWANIE.txt  README.md  README_NEW.md  README_PWA.html  build-all.sh  build-and-deploy.sh  installed-packages.txt  manage-app.sh  package.json  quick-deploy.sh  rust-targets.txt  saper-xiaomi-compatible-release.apk.idsig  setup-android-env.ps1  setup-android-env.sh  switch-apk.sh
public/: index.html  main.js  manifest.json  style.css  sw.js
src/: lib.rs  main.rs
src-frontend/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
