[package]
name = "moja-aplikacja-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "moja_aplikacja_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "saper-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
